Bug fix: string may also be empty.